improved plugin messages integration and more